# charted

./: .bazelignore  .bazelrc  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .golangci.yml  .goreleaser.yml  .hadolint.yaml  .noeldoc.hcl  .prettierrc.json  .sentryclirc  .tools-version  BUILD.bazel  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  MODULE.bazel  Makefile  README.md  SECURITY.md  Vagrantfile  WORKSPACE  build.gradle.kts  build.rs  clippy.toml  config.example.yaml  default.nix  deny.toml  dev  docker-bake.hcl  docker-compose.yml  flake.nix  go.mod  go.sum  (+16 more)
cli/: .gitignore  BUILD.bazel  Cargo.toml  README.md  build.gradle.kts
cli/distribution/: LICENSE  README.txt  charted.service
cli/distribution/config/: charted.yaml  logback.properties
cli/src/: lib.rs  macros.rs  main.rs  server.rs  setup_utils.rs
cli/src/commands/: completion.rs  completions.rs  generate.rs  generate_config.rs  mod.rs  models.rs  openapi.rs  server.rs  version.rs
crates/charts/: Cargo.toml
crates/charts/src/: builder.rs  lib.rs
crates/charts/tests/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: cmds.rs  lib.rs  util.rs
crates/client/: Cargo.toml  README.md  build.rs
crates/client/src/: client.rs  error.rs  lib.rs  types.rs
crates/common/: BUILD.bazel  Cargo.toml  build.rs
crates/common/src/: bitfield.rs  crypto.rs  extract.rs  lib.rs  macros.rs  models.rs  os.rs  rust.rs  serde.rs  server.rs  snowflake.rs  validator.rs
crates/config/: BUILD.bazel  Cargo.toml
crates/config/src/: caching.rs  cdn.rs  config.rs  database.rs  db.rs  features.rs  from_env.rs  helpers.rs  lib.rs  logging.rs  merge.rs  metrics.rs  redis.rs  search.rs  secure_setting.rs  server.rs  sessions.rs  storage.rs
crates/configuration/: Cargo.toml
crates/configuration/src/: database.rs  features.rs  lib.rs  logging.rs  metrics.rs  server.rs  sessions.rs  storage.rs  tracing.rs  util.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: api.rs  bitflags.rs  di.rs  distribution.rs  ext.rs  lib.rs  macros.rs  multipart.rs  openapi.rs  pagination.rs  redis.rs  serde.rs  testing.rs  ulid.rs
crates/database/: BUILD.bazel  Cargo.toml  build.rs  diesel.postgresql.toml  diesel.sqlite.toml  diesel.toml
crates/database/migrations/: 20230717000403_init.sql  20230820094136_update_timestamp.sql  20230920222946_update_indexes.sql
crates/database/src/: controller.rs  controllers.rs  entities.rs  extensions.rs  lib.rs  migrations.rs  paginate.rs  pagination.rs  schema.rs
crates/devtools/: Cargo.toml
crates/devtools/src/: lib.rs  main.rs
crates/emails/: BUILD.bazel  Cargo.toml  build.rs
crates/emails/src/: lib.rs
crates/helm-charts/: BUILD.bazel  Cargo.toml
crates/helm-charts/__fixtures__/: README
crates/helm-charts/src/: builder.rs  lib.rs
crates/helm-charts/tests/: builder.rs
crates/helm-plugin/: Cargo.toml
crates/helm-plugin/src/: args.rs  auth.rs  lib.rs  main.rs  util.rs
crates/metrics/: BUILD.bazel  Cargo.toml
crates/metrics/src/: collectors.rs  lib.rs  opentelemetry.rs  registry.rs
crates/server/: Cargo.toml
crates/server/src/: context.rs  drive.rs  ext.rs  extract.rs  feature.rs  lib.rs  macros.rs  metrics.rs  middleware.rs  models.rs  multipart.rs  openapi.rs  ops.rs  pagination.rs  responses.rs  routing.rs  state.rs  test.rs  testing.rs  types.rs  version.rs  yaml.rs
crates/serverv2/: Cargo.toml
crates/serverv2/src/: env.rs  ext.rs  feature.rs  lib.rs  macros.rs  openapi.rs  ops.rs  routing.rs  util.rs
crates/sessions/: BUILD.bazel  Cargo.toml  lib.rs
crates/sessions/integrations/: BUILD.bazel  Cargo.toml
crates/sessions/ldap/: BUILD.bazel  Cargo.toml
crates/sessions/local/: BUILD.bazel  Cargo.toml
crates/sessions/passwordless/: BUILD.bazel  Cargo.toml
crates/sessions/src/: lib.rs  manager.rs  provider.rs
crates/sessions/zitadel/: BUILD.bazel  Cargo.toml
crates/tatsuki/: Cargo.toml  README.md
crates/tatsuki/examples/: cron.rs  tokio.rs
crates/tatsuki/macros/: Cargo.toml
crates/tatsuki/src/: clock.rs  lib.rs  rt.rs  snapshot.rs
crates/types/: Cargo.toml
crates/types/src/: db.rs  distribution.rs  entities.rs  helm.rs  lib.rs  name.rs  newtypes.rs  payloads.rs  util.rs
server/: BUILD.bazel  Cargo.toml  build.gradle.kts  server.go
server/middleware/: auth_header.go  basic_auth.go  error_handler.go  grpc.go  logger.go
server/proc-macro/: BUILD.bazel  Cargo.toml
server/proc-macro/src/: controller.rs  lib.rs
server/routes/: main.go  ping.go  version.go
server/routes/api/: router.go
server/single-user/: build.gradle.kts
server/src/: app.rs  extract.rs  lib.rs  metrics.rs  multipart.rs  openapi.rs  pagination.rs  server.rs  validation.rs  version.rs
server/src/bootstrap/: mod.rs  preinit.rs  setup_logging.rs  start_server.rs
server/src/middleware/: log.rs  mod.rs  request_id.rs  session.rs
server/src/models/: mod.rs  res.rs  yaml.rs
server/src/routing/: mod.rs
services/emails/: BUILD.bazel  Cargo.toml  README.md  build.rs
services/emails/protos/: BUILD.bazel  emails.proto
services/emails/src/: config.rs  lib.rs  main.rs  registry.rs  service.rs
web/: .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .yarnrc.yml  BUILD.bazel  Cargo.toml  README.md  auto-imports.d.ts  build.gradle.kts  bun.lockb  components.d.ts  eslint.config.js  index.html  metadata.json  package.json  pnpm-lock.yaml  postcss.config.cjs  qodana.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.eslint.json  tsconfig.json  typed-router.d.ts  vite.config.ts
web/_src/handlers/: RequireRepositoryPermission.tsx  RequiresOrganizationPermission.tsx  (+1 more)
web/public/: .gitkeep
web/scripts/: build-server.ts  build.ts  eslint-ci.js  eslint-ci.ts  eslint.config.js  eslint.ts  openapi.ts  patch-metadata.ts  prettier.ts  tsconfig.json  tsrunner
web/server/: config.ts  main.ts  metadata.ts  server.ts  tsconfig.json
web/src/: App.tsx  App.vue  BUILD.bazel  auto-imports.d.ts  env.d.ts  lib.rs  main.ts  main.tsx  mantine.config.ts  router.ts  router.tsx  stitches.config.ts  web-vitals.ts
(+2799 files in other folders)
