# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"
members = [
    "crates/authz",
    "crates/authz/*",
    "crates/cli",
    "crates/client",
    "crates/configuration",
    "crates/core",
    "crates/database",
    "crates/features",
    "crates/helm/charts",
    "crates/helm/plugin",
    "crates/helm/types",
    "crates/server",
    "crates/types",

    "src/charted",
    "src/internals",

    "features/totp",
]

[workspace.package]
version = "0.1.0"
authors = [
    "Noel Towa <cutie@floofy.dev>",
    "Spotlight <spotlight@joscomputing.space>",
    "John Burke <winter@winterfox.tech>",
]
documentation = "https://charts.noelware.org/docs"
edition = "2021"
homepage = "https://charts.noelware.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/charted-dev/charted"

[workspace.dependencies]
charted-authz = { path = "./crates/authz" }
charted-authz-local = { path = "./crates/authz/local" }
charted-authz-ldap = { path = "./crates/authz/ldap" }
charted-authz-static = { path = "./crates/authz/static" }
charted-cli = { path = "./crates/cli" }
charted-client = { path = "./crates/client", version = "0.1.0" }
charted-config = { path = "./crates/configuration" }
charted-core = { path = "./crates/core", version = "0.1.0" }
charted-database = { path = "./crates/database" }
charted-helm-charts = { path = "./crates/helm/charts" }
charted-helm-plugin = { path = "./crates/helm/plugin" }
charted-helm-types = { path = "./crates/helm/types" }
charted-metrics = { path = "./crates/metrics" }
charted-search = { path = "./crates/search" }
charted-server = { path = "./crates/server" }
charted-types = { path = "./crates/types", version = "0.1.0" }

axum = { version = "0.8.1", features = ["macros", "http2"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive", "env"] }
clap_complete = "4.5.44"
color-eyre = { version = "0.6.3", features = ["issue-url"] }
derive_more = "2.0.0"
eyre = "0.6.12"
num_cpus = "1.16.0"
rand = "0.9.0"
rustc_version = "0.4.1"
schemars = { version = "0.8.21", features = ["chrono", "semver", "url"] }
sea-orm = { version = "1.1.4", default-features = false, features = [
    "macros",
    "with-chrono",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "1.1.4", default-features = false, features = [
    "runtime-tokio",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-chrono",
] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = "1.43.0"
utoipa = { version = "5.3.1", features = [
    "chrono",
    "non_strict_integers",
    "ulid",
] }

# [workspace.dependencies]
# argon2 = "0.5.3"
# axum = { version = "0.8.1", features = ["macros", "http2"] }
# charted-core = { version = "0.1.0", path = "./crates/core", default-features = false }
# charted-database = { version = "0.1.0", path = "./crates/database" }
# charted-testkit = "0.1.2"
# charted-types = { version = "0.1.0", path = "./crates/types", default-features = false }
# chrono = { version = "0.4.23", features = ["serde"] }
# clap = { version = "4.5.20", features = ["derive", "env"] }
# clap_complete = "4.5.33"
# derive_more = "1.0.0"
# eyre = "0.6.12"
# multer = "3.1.0"
# opentelemetry = "0.27.0"
# rayon = "1.10.0"
# remi = "0.10.0"
# remi-azure = { version = "0.10.0", features = ["tracing", "export-azure"] }
# remi-fs = { version = "0.10.0", features = ["tracing"] }
# remi-s3 = { version = "0.10.0", features = ["tracing", "export-crates"] }
# reqwest = { version = "0.12.9", default-features = false, features = [
#     "http2",
#     "macos-system-configuration",
#     "charset",
#     "rustls-tls",
# ] }
# schemars = "0.8.21"
# semver = { version = "1.0.23", features = ["serde"] }
# sentry = "0.36.0"
# serde = { version = "1.0.204", features = ["derive"] }
# serde_json = "1.0.122"
# serde_yaml_ng = "0.10.0"
# tempfile = "3.12.0"
# utoipa = { version = "5.1.1", features = ["chrono", "non_strict_integers"] }
# testcontainers = "0.23.0"
# testcontainers-modules = "0.11.0"
# tokio = "1.39.3"
# url = "2.5.2"
# which = "7.0.0"

[workspace.dependencies.azalia]
version = "0.1.0"
git = "https://github.com/Noelware/azalia"
rev = "f4600130658cfe523350222717b4530ce4d30123"

[profile.release]
codegen-units = 1 # use a single codegen unit
opt-level = "s" # optimize for size
panic = "abort" # abort the process when a panic occurs
strip = true # strip all debug symbols
debug = 0 # disable debug information
lto = true # perform LTO on all crates (even our own)
