# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"
members = [
    "crates/authz",
    "crates/authz/*",
    "crates/cli",
    "crates/client",
    "crates/configuration",
    "crates/core",
    "crates/database",
    "crates/helm/charts",
    "crates/helm/types",
    "crates/metrics",
    "crates/server",
    "crates/types",

    "src/charted",
    "src/internals",

    "features/totp",
]

[workspace.package]
version = "0.1.0"
authors = [
    "Noel Towa <cutie@floofy.dev>",
    "Spotlight <spotlight@joscomputing.space>",
    "John Burke <winter@winterfox.tech>",
]
documentation = "https://charts.noelware.org/docs"
edition = "2024"
homepage = "https://charts.noelware.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/charted-dev/charted"
rust-version = "1.85"

[workspace.dependencies]
charted-authz = { path = "./crates/authz" }
charted-authz-local = { path = "./crates/authz/local" }
charted-authz-ldap = { path = "./crates/authz/ldap" }
charted-authz-static = { path = "./crates/authz/static" }
charted-cli = { path = "./crates/cli" }
charted-client = { path = "./crates/client", version = "0.1.0" }
charted-config = { path = "./crates/configuration" }
charted-core = { path = "./crates/core", version = "0.1.0", features = [
    "collect-backtrace-frames",
] }
charted-database = { path = "./crates/database" }
charted-helm-charts = { path = "./crates/helm/charts" }
charted-helm-types = { path = "./crates/helm/types" }
charted-metrics = { path = "./crates/metrics" }
charted-search = { path = "./crates/search" }
charted-server = { path = "./crates/server" }
charted-types = { path = "./crates/types", version = "0.1.0" }

argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros", "http2"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive", "env"] }
clap_complete = "4.5.44"
color-eyre = { version = "0.6.3", features = ["issue-url"] }
derive_more = "2.0.0"
dotenvy = "0.15.7"
eyre = "0.6.12"
metrics-exporter-prometheus = { version = "0.16.2", default-features = false, features = [
    "tracing",
] }
mimalloc = "0.1.43"
multer = { version = "3.1.0", features = ["log", "tokio"] }
num_cpus = "1.16.0"
rand = "0.9.0"
remi-fs = { version = "0.10.0", features = ["tracing"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "gzip",
    "rustls-tls",
    "rustls-tls-webpki-roots",
    "json",
] }
rustc_version = "0.4.1"
schemars = { version = "0.8.21", features = ["chrono", "semver", "url"] }
sea-orm = { version = "1.1.4", default-features = false, features = [
    "macros",
    "with-chrono",
    "sqlx-sqlite",
    "sqlx-postgres",
] }
sea-orm-migration = { version = "1.1.4", default-features = false, features = [
    "with-chrono",
    "sqlx-sqlite",
    "sqlx-postgres",
] }
semver = { version = "1.0.25", features = ["serde"] }
sentry = "0.36.0"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
serde_yaml_ng = "0.10.0"
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "postgres",
    "runtime-tokio",
    "runtime-tokio-rustls",
] }
tempfile = "3.12.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.8.20"
tokio = "1.43.0"
ulid = { version = "1.1.4", features = ["serde"] }
utoipa = { version = "5.3.1", features = [
    "chrono",
    "non_strict_integers",
    "ulid",
    "url",
] }
url = "2.5.4"

[workspace.dependencies.azalia]
version = "0.1.0"
git = "https://github.com/Noelware/azalia"
rev = "f4600130658cfe523350222717b4530ce4d30123"
features = ["remi-tracing"]

[patch.crates-io]
# https://github.com/juhaku/utoipa/issues/1335
utoipa = { git = "https://github.com/Noelware/utoipa", branch = "toresponse-cow" }

[profile.release]
codegen-units = 1 # use a single codegen unit
opt-level = "s" # optimize for size
panic = "abort" # abort the process when a panic occurs
strip = true # strip all debug symbols
debug = 0 # disable debug information
lto = true # perform LTO on all crates (even our own)
