# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2023 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# This is not implemented as charted-server doesn't support using Bzlmod yet. This is due to
# (as of 18/12/23) `rules_rust` not being published on Bazel Central Registry (https://registry.bazel.build),
# so we need to wait and `bazel` in nixpkgs is still pinned at 6.4.0

# buildifier: disable=module-docstring
module(
    name = "charted-server",
    version = "0.0.0-devel.0",
)
