# 📦 charted-server: Free, open source, and reliable Helm Chart registry made in Kotlin.
# Copyright 2022 Noelware <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-cli"
description = "📦 Free, open source, and reliable Helm Chart registry made in Kotlin."
version = "0.3.0-nightly"
edition = "2021"
homepage = "https://charts.noelware.org"
license = "Apache 2.0"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.65"
async-trait = "0.1.58"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.15", features = ["derive"] }
clap_complete = "4.0.2"
fern = "0.6.1"
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["full"] }
which = "4.3.0"

[[bin]]
path = "src/main.rs"
name = "charted"
