# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2023 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//:build/rust_project.bzl", "rust_project")

exports_files(["Cargo.toml"])

local_crates = ["//%s:charted_%s" % (path, name) for (path, name) in [
    ("crates/avatars", "avatars"),
    ("crates/common", "common"),
    ("crates/config", "config"),
    ("crates/database", "database"),
    ("crates/helm-charts", "helm_charts"),
    ("crates/logging", "logging"),
    ("crates/metrics", "metrics"),
    ("crates/redis", "redis"),
    ("crates/openapi", "openapi"),
    ("crates/storage", "storage"),
    ("crates/sessions", "sessions"),
    ("crates/sessions/local", "sessions_local"),
    ("crates/search", "search"),
    ("crates/search/elasticsearch", "search_elasticsearch"),
    ("crates/search/meilisearch", "search_meilisearch"),
]]

rust_project(
    name = "server",
    include_tests = True,
    proc_macro_deps = [
        "//crates/proc-macros:charted_proc_macros",
        "@crate_index//:async-trait",
        "@crate_index//:paste",
    ],
    deps = [
        "@crate_index//:ansi_term",
        "@crate_index//:argon2",
        "@crate_index//:axum",
        "@crate_index//:base64",
        "@crate_index//:chrono",
        "@crate_index//:eyre",
        "@crate_index//:futures-util",
        "@crate_index//:jsonwebtoken",
        "@crate_index//:mime",
        "@crate_index//:once_cell",
        "@crate_index//:remi-core",
        "@crate_index//:sentry",
        "@crate_index//:sentry-eyre",
        "@crate_index//:sentry-tower",
        "@crate_index//:sentry-tracing",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:serde_path_to_error",
        "@crate_index//:serde_yaml",
        "@crate_index//:sqlx",
        "@crate_index//:tokio",
        "@crate_index//:tower",
        "@crate_index//:tower-http",
        "@crate_index//:tower-layer",
        "@crate_index//:tracing",
        "@crate_index//:tracing-log",
        "@crate_index//:tracing-subscriber",
        "@crate_index//:utoipa",
        "@crate_index//:validator",
    ] + local_crates,
)
