# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2023 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-server"
description = "🐻‍❄️📦 REST API implementation of charted-server, made with Axum"
version = "0.0.0-devel.0"
edition = "2021"
homepage = "https://charts.noelware.org"
authors = ["Noel Towa <cutie@floofy.dev>", "Noelware Team <team@noelware.org>"]

[dependencies]
ansi_term = "0.12.1"
async-trait = "0.1.71"
axum = { version = "0.6.18", features = ["headers", "macros", "http2", "tracing", "multipart"] }
charted-common = { version = "0.0.0-devel.0", path = "../crates/common" }
charted-config = { version = "0.0.0-devel.0", path = "../crates/config" }
charted-database = { version = "0.0.0-devel.0", path = "../crates/database" }
charted-helm-charts = { version = "0.0.0-devel.0", path = "../crates/helm-charts" }
charted-logging = { version = "0.0.0-devel.0", path = "../crates/logging" }
charted-openapi = { version = "0.0.0-devel.0", path = "../crates/openapi" }
charted-redis = { version = "0.0.0-devel.0", path = "../crates/redis" }
charted-search = { version = "0.0.0-devel.0", path = "../crates/search" }
charted-search-elasticsearch = { version = "0.0.0-devel.0", path = "../crates/search/elasticsearch" }
charted-search-meilisearch = { version = "0.0.0-devel.0", path = "../crates/search/meilisearch" }
charted-storage = { version = "0.0.0-devel.0", path = "../crates/storage" }
charted-web = { version = "0.0.0-devel.0", path = "../web" }
chrono = "0.4.24"
eyre = "0.6.8"
once_cell = "1.18.0"
remi-core = "0.2.1"
remi-fs = "0.2.1"
remi-s3 = "0.2.1"
sentry = { version = "0.31.1", features = ["tracing", "tower", "tower-http"] }
sentry-tower = "0.31.1"
sentry-tracing = "0.31.1"
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
testcontainers = { version = "0.14.0", features = ["bollard", "tokio"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.4.1", features = ["cors", "httpdate", "trace", "catch-panic"] }
tower-layer = "0.3.2"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
utoipa = { version = "3.3.0", features = ["axum_extras", "chrono", "serde_yaml", "uuid"] }
