# 🐻‍❄️📦 charted-server: Free, open source, and reliable Helm Chart registry made in Rust
# Copyright 2022-2023 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-server"
description = "🐻‍❄️📦 REST API implementation of charted-server, made with Axum"
version = "0.0.0-devel.0"
edition = "2021"
homepage = "https://charts.noelware.org"
authors = ["Noel Towa <cutie@floofy.dev>", "Noelware Team <team@noelware.org>"]

[dependencies]
ansi_term = "0.12.1"
argon2 = "0.5.2"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["headers", "macros", "http2", "tracing", "multipart"] }
base64 = "0.21.5"
charted-avatars = { version = "0.0.0-devel.0", path = "../crates/avatars" }
charted-common = { version = "0.0.0-devel.0", path = "../crates/common" }
charted-config = { version = "0.0.0-devel.0", path = "../crates/config" }
charted-database = { version = "0.0.0-devel.0", path = "../crates/database" }
charted-helm-charts = { version = "0.0.0-devel.0", path = "../crates/helm-charts" }
charted-logging = { version = "0.0.0-devel.0", path = "../crates/logging" }
charted-metrics = { version = "0.0.0-devel.0", path = "../crates/metrics" }
charted-openapi = { version = "0.0.0-devel.0", path = "../crates/openapi" }
charted-proc-macros = { version = "0.0.0-devel.0", path = "../crates/proc-macros" }
charted-redis = { version = "0.0.0-devel.0", path = "../crates/redis" }
charted-search = { version = "0.0.0-devel.0", path = "../crates/search" }
charted-search-elasticsearch = { version = "0.0.0-devel.0", path = "../crates/search/elasticsearch" }
charted-search-meilisearch = { version = "0.0.0-devel.0", path = "../crates/search/meilisearch" }
charted-server-proc-macro = { version = "0.0.0-devel.0", path = "proc-macro" }
charted-sessions = { version = "0.0.0-devel.0", path = "../crates/sessions" }
charted-sessions-local = { version = "0.0.0-devel.0", path = "../crates/sessions/local" }
charted-storage = { version = "0.0.0-devel.0", path = "../crates/storage" }
chrono = "0.4.31"
erased-serde = "0.3.31"
eyre = "0.6.8"
futures-util = "0.3.29"
jsonwebtoken = "9.1.0"
mime = "0.3.17"
multer = { version = "2.1.0", features = ["tokio-io"] }
once_cell = "1.18.0"
paste = "1.0.14"
prometheus-client = "0.22.0"
remi-core = "0.4.1"
rust-embed = { version = "8.0.0", features = ["mime-guess"] }
semver = { version = "1.0.20", features = ["serde"] }
sentry = { version = "0.31.7", features = ["tracing", "tower", "tower-http", "debug-logs"] }
sentry-eyre = "0.1.0"
sentry-tower = "0.31.7"
sentry-tracing = "0.31.7"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
serde_path_to_error = "0.1.14"
serde_yaml = "0.9.25"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.4.4", features = ["auth", "cors", "httpdate", "trace", "catch-panic", "limit"] }
tower-layer = "0.3.2"
tracing = "0.1.40"
tracing-log = "0.1.4"
tracing-subscriber = "0.3.17"
utoipa = { version = "4.0.0", features = ["axum_extras", "chrono", "serde_yaml", "uuid"] }
validator = "0.16.1"
